--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 header{
-    background-image:linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)), url(./beach\ image.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)), url(./beach image.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
